--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<carina-core_version>7.4.21</carina-core_version>
 		<java.version>11</java.version>
 		<zebrunner-agent.version>1.6.7</zebrunner-agent.version>
-		<suite>helloWorld</suite>
+		<suite>web</suite>
 	</properties>
 
 	<repositories>
@@ -35,6 +35,12 @@
 	</repositories>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.zebrunner</groupId>
+			<artifactId>agent-testng</artifactId>
+			<version>1.7.1</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>com.qaprosoft</groupId>
 			<artifactId>carina-core</artifactId>
