--- a/src/main/resources/agent.properties
+++ b/src/main/resources/agent.properties
@@ -1,5 +1,4 @@
 reporting.enabled=false
-reporting.server.hostname=
-reporting.server.access-token=
 reporting.project-key=DEF
-reporting.run.environment=
+reporting.server.hostname=bestcompany.zebrunner.com
+reporting.server.access-token=C6n3OaEVBmvKnvuY2ZvNfK4KxaeoMe1zBi9Mu1A7ksfFs16DXR
